--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
     <script>
+      var gameInstance;
+
       document.addEventListener("load", function(event) {
-        var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebGL.json", {onProgress: UnityProgress});
+        gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebGL.json", {onProgress: UnityProgress});
       });
     </script>
   </head>
